[kedmd] first implementation

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -519,3 +519,22 @@
   year={2016},
   publisher={National Acad Sciences}
 }
+@article{kevrekidis2016kernel,
+  title={A kernel-based method for data-driven Koopman spectral analysis},
+  author={Kevrekidis, Ioannis G and Rowley, Clarence W and Williams, Matthew O},
+  journal={Journal of Computational Dynamics},
+  volume={2},
+  number={2},
+  pages={247--265},
+  year={2016}
+}
+@article{klus2018kernel,
+  title={A kernel-based approach to molecular conformation analysis},
+  author={Klus, Stefan and Bittracher, Andreas and Schuster, Ingmar and Sch{\"u}tte, Christof},
+  journal={The Journal of Chemical Physics},
+  volume={149},
+  number={24},
+  pages={244109},
+  year={2018},
+  publisher={AIP Publishing LLC}
+}
