--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -538,3 +538,12 @@
   year={2018},
   publisher={AIP Publishing LLC}
 }
+@article{bach2002kernel,
+  title={Kernel independent component analysis},
+  author={Bach, Francis R and Jordan, Michael I},
+  journal={Journal of machine learning research},
+  volume={3},
+  number={Jul},
+  pages={1--48},
+  year={2002}
+}
