[docs] restructure some things

--- a/docs/source/notebooks/hmm.ipynb
+++ b/docs/source/notebooks/hmm.ipynb
@@ -38,10 +38,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:02.821097Z",
-     "iopub.status.busy": "2020-10-23T07:46:02.819540Z",
-     "iopub.status.idle": "2020-10-23T07:46:03.578605Z",
-     "shell.execute_reply": "2020-10-23T07:46:03.578925Z"
+     "iopub.execute_input": "2020-10-26T11:59:33.764020Z",
+     "iopub.status.busy": "2020-10-26T11:59:33.762199Z",
+     "iopub.status.idle": "2020-10-26T11:59:34.521874Z",
+     "shell.execute_reply": "2020-10-26T11:59:34.521388Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:03.582154Z",
-     "iopub.status.busy": "2020-10-23T07:46:03.581711Z",
-     "iopub.status.idle": "2020-10-23T07:46:03.584089Z",
-     "shell.execute_reply": "2020-10-23T07:46:03.584384Z"
+     "iopub.execute_input": "2020-10-26T11:59:34.525026Z",
+     "iopub.status.busy": "2020-10-26T11:59:34.524639Z",
+     "iopub.status.idle": "2020-10-26T11:59:34.526656Z",
+     "shell.execute_reply": "2020-10-26T11:59:34.526969Z"
     }
    },
    "outputs": [],
@@ -94,10 +94,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:03.588047Z",
-     "iopub.status.busy": "2020-10-23T07:46:03.586811Z",
-     "iopub.status.idle": "2020-10-23T07:46:03.591336Z",
-     "shell.execute_reply": "2020-10-23T07:46:03.591004Z"
+     "iopub.execute_input": "2020-10-26T11:59:34.531903Z",
+     "iopub.status.busy": "2020-10-26T11:59:34.531513Z",
+     "iopub.status.idle": "2020-10-26T11:59:34.533241Z",
+     "shell.execute_reply": "2020-10-26T11:59:34.533691Z"
     }
    },
    "outputs": [],
@@ -117,21 +117,21 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:03.596924Z",
-     "iopub.status.busy": "2020-10-23T07:46:03.596534Z",
-     "iopub.status.idle": "2020-10-23T07:46:04.329189Z",
-     "shell.execute_reply": "2020-10-23T07:46:04.328794Z"
+     "iopub.execute_input": "2020-10-26T11:59:34.539661Z",
+     "iopub.status.busy": "2020-10-26T11:59:34.539194Z",
+     "iopub.status.idle": "2020-10-26T11:59:35.329182Z",
+     "shell.execute_reply": "2020-10-26T11:59:35.329659Z"
     }
    },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "f = plt.figure(constrained_layout=False, figsize=(14, 4))\n",
-    "gs = f.add_gridspec(nrows=2, ncols=2)\n",
+    "f = plt.figure(constrained_layout=False, figsize=(7, 7))\n",
+    "gs = f.add_gridspec(nrows=4, ncols=1)\n",
     "ax1 = f.add_subplot(gs[0, 0])\n",
     "ax2 = f.add_subplot(gs[1, 0])\n",
-    "ax3 = f.add_subplot(gs[:, 1])\n",
+    "ax3 = f.add_subplot(gs[2:, 0])\n",
     "\n",
     "ax1.plot(hidden_trajectory[:200])\n",
     "ax1.set_ylabel(\"macrostate\")\n",
@@ -186,10 +186,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:04.336192Z",
-     "iopub.status.busy": "2020-10-23T07:46:04.333956Z",
-     "iopub.status.idle": "2020-10-23T07:46:04.344098Z",
-     "shell.execute_reply": "2020-10-23T07:46:04.344592Z"
+     "iopub.execute_input": "2020-10-26T11:59:35.333826Z",
+     "iopub.status.busy": "2020-10-26T11:59:35.333327Z",
+     "iopub.status.idle": "2020-10-26T11:59:35.351542Z",
+     "shell.execute_reply": "2020-10-26T11:59:35.351038Z"
     }
    },
    "outputs": [],
@@ -204,10 +204,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:04.347569Z",
-     "iopub.status.busy": "2020-10-23T07:46:04.347071Z",
-     "iopub.status.idle": "2020-10-23T07:46:04.349019Z",
-     "shell.execute_reply": "2020-10-23T07:46:04.349505Z"
+     "iopub.execute_input": "2020-10-26T11:59:35.354436Z",
+     "iopub.status.busy": "2020-10-26T11:59:35.353984Z",
+     "iopub.status.idle": "2020-10-26T11:59:35.356546Z",
+     "shell.execute_reply": "2020-10-26T11:59:35.355876Z"
     }
    },
    "outputs": [],
@@ -243,10 +243,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:04.353964Z",
-     "iopub.status.busy": "2020-10-23T07:46:04.352932Z",
-     "iopub.status.idle": "2020-10-23T07:46:04.451073Z",
-     "shell.execute_reply": "2020-10-23T07:46:04.450636Z"
+     "iopub.execute_input": "2020-10-26T11:59:35.360771Z",
+     "iopub.status.busy": "2020-10-26T11:59:35.360013Z",
+     "iopub.status.idle": "2020-10-26T11:59:35.365383Z",
+     "shell.execute_reply": "2020-10-26T11:59:35.365845Z"
     }
    },
    "outputs": [],
@@ -269,10 +269,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:04.454157Z",
-     "iopub.status.busy": "2020-10-23T07:46:04.453663Z",
-     "iopub.status.idle": "2020-10-23T07:46:04.455567Z",
-     "shell.execute_reply": "2020-10-23T07:46:04.456091Z"
+     "iopub.execute_input": "2020-10-26T11:59:35.368901Z",
+     "iopub.status.busy": "2020-10-26T11:59:35.368440Z",
+     "iopub.status.idle": "2020-10-26T11:59:35.370411Z",
+     "shell.execute_reply": "2020-10-26T11:59:35.370868Z"
     }
    },
    "outputs": [],
@@ -298,10 +298,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:04.459227Z",
-     "iopub.status.busy": "2020-10-23T07:46:04.458741Z",
-     "iopub.status.idle": "2020-10-23T07:46:04.525408Z",
-     "shell.execute_reply": "2020-10-23T07:46:04.525938Z"
+     "iopub.execute_input": "2020-10-26T11:59:35.373707Z",
+     "iopub.status.busy": "2020-10-26T11:59:35.373248Z",
+     "iopub.status.idle": "2020-10-26T11:59:35.453963Z",
+     "shell.execute_reply": "2020-10-26T11:59:35.454440Z"
     }
    },
    "outputs": [],
@@ -321,10 +321,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:04.529110Z",
-     "iopub.status.busy": "2020-10-23T07:46:04.528612Z",
-     "iopub.status.idle": "2020-10-23T07:46:04.531085Z",
-     "shell.execute_reply": "2020-10-23T07:46:04.530591Z"
+     "iopub.execute_input": "2020-10-26T11:59:35.457447Z",
+     "iopub.status.busy": "2020-10-26T11:59:35.456991Z",
+     "iopub.status.idle": "2020-10-26T11:59:35.459455Z",
+     "shell.execute_reply": "2020-10-26T11:59:35.458974Z"
     }
    },
    "outputs": [],
@@ -346,10 +346,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:04.534040Z",
-     "iopub.status.busy": "2020-10-23T07:46:04.533508Z",
-     "iopub.status.idle": "2020-10-23T07:46:07.811886Z",
-     "shell.execute_reply": "2020-10-23T07:46:07.812403Z"
+     "iopub.execute_input": "2020-10-26T11:59:35.462915Z",
+     "iopub.status.busy": "2020-10-26T11:59:35.462427Z",
+     "iopub.status.idle": "2020-10-26T11:59:38.836255Z",
+     "shell.execute_reply": "2020-10-26T11:59:38.836742Z"
     }
    },
    "outputs": [],
@@ -373,10 +373,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:07.815439Z",
-     "iopub.status.busy": "2020-10-23T07:46:07.814947Z",
-     "iopub.status.idle": "2020-10-23T07:46:07.818239Z",
-     "shell.execute_reply": "2020-10-23T07:46:07.817734Z"
+     "iopub.execute_input": "2020-10-26T11:59:38.839771Z",
+     "iopub.status.busy": "2020-10-26T11:59:38.839316Z",
+     "iopub.status.idle": "2020-10-26T11:59:38.842749Z",
+     "shell.execute_reply": "2020-10-26T11:59:38.842263Z"
     }
    },
    "outputs": [],
@@ -396,10 +396,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:07.832944Z",
-     "iopub.status.busy": "2020-10-23T07:46:07.831985Z",
-     "iopub.status.idle": "2020-10-23T07:46:07.974645Z",
-     "shell.execute_reply": "2020-10-23T07:46:07.975140Z"
+     "iopub.execute_input": "2020-10-26T11:59:38.864392Z",
+     "iopub.status.busy": "2020-10-26T11:59:38.859981Z",
+     "iopub.status.idle": "2020-10-26T11:59:39.001872Z",
+     "shell.execute_reply": "2020-10-26T11:59:39.001398Z"
     }
    },
    "outputs": [],
@@ -427,10 +427,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:07.978119Z",
-     "iopub.status.busy": "2020-10-23T07:46:07.977643Z",
-     "iopub.status.idle": "2020-10-23T07:46:07.979144Z",
-     "shell.execute_reply": "2020-10-23T07:46:07.979628Z"
+     "iopub.execute_input": "2020-10-26T11:59:39.005016Z",
+     "iopub.status.busy": "2020-10-26T11:59:39.004641Z",
+     "iopub.status.idle": "2020-10-26T11:59:39.007012Z",
+     "shell.execute_reply": "2020-10-26T11:59:39.006610Z"
     }
    },
    "outputs": [],
@@ -450,10 +450,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-23T07:46:07.984912Z",
-     "iopub.status.busy": "2020-10-23T07:46:07.984412Z",
-     "iopub.status.idle": "2020-10-23T07:46:11.475955Z",
-     "shell.execute_reply": "2020-10-23T07:46:11.475446Z"
+     "iopub.execute_input": "2020-10-26T11:59:39.012761Z",
+     "iopub.status.busy": "2020-10-26T11:59:39.012297Z",
+     "iopub.status.idle": "2020-10-26T11:59:42.574211Z",
+     "shell.execute_reply": "2020-10-26T11:59:42.573879Z"
     }
    },
    "outputs": [],
