--- a/docs/source/notebooks/tae.ipynb
+++ b/docs/source/notebooks/tae.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Time-lagged autoencoders\n",
     "\n",
+    "For users already familiar with the time-lagged autoencoders interface: The corresponding [API docs](../api/generated/deeptime.decomposition.TAE.html#deeptime.decomposition.TAE).\n",
+    "\n",
     "Time-lagged autoencoders <cite data-cite=\"nbtae-wehmeyer2018timelagged\">(Wehmeyer, 2018)</cite> are a type of neural network approach which tries to first compress / encode instantaneous data through a function\n",
     "\n",
     "$$ E : \\mathbb{R}^N \\to \\mathbb{R}^n, x_t\\mapsto E(x_t) $$\n",
