--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -16,7 +16,7 @@
 }
 @article{prinz2011markov,
     title = {Markov models of molecular kinetics: Generation and validation},
-    author = {Prinz, Jan-Hendrik and Wu, Hao and Sarich, Marco and Keller, Bettina and Senne, Martin and Held, Martin and Chodera, John D and Sch {\"u} tte, Christof and No {\'e} , Frank},
+    author = {Prinz, Jan-Hendrik and Wu, Hao and Sarich, Marco and Keller, Bettina and Senne, Martin and Held, Martin and Chodera, John D and Sch{\"u}tte, Christof and No{\'e}, Frank},
     journal = {The Journal of chemical physics},
     volume = {134},
     number = {17},
@@ -49,7 +49,7 @@
 }
 @article{perez2013identification,
     title = {Identification of slow molecular order parameters for Markov model construction},
-    author = {P {\'e} rez-Hern {\'a} ndez, Guillermo and Paul, Fabian and Giorgino, Toni and De Fabritiis, Gianni and No {\'e} , Frank},
+    author = {P{\'e}rez-Hern{\'a}ndez, Guillermo and Paul, Fabian and Giorgino, Toni and De Fabritiis, Gianni and No{\'e}, Frank},
     journal = {The Journal of chemical physics},
     volume = {139},
     number = {1},
@@ -69,7 +69,7 @@
 }
 @article{noe2015kinetic,
     title = {Kinetic distance and kinetic maps from molecular dynamics simulation},
-    author = {No {\'e} , Frank and Clementi, Cecilia},
+    author = {No{\'e}, Frank and Clementi, Cecilia},
     journal = {Journal of chemical theory and computation},
     volume = {11},
     number = {10},
@@ -79,7 +79,7 @@
 }
 @article{noe2016commute,
     title = {Commute maps: Separating slowly mixing molecular configurations for kinetic modeling},
-    author = {No {\'e} , Frank and Banisch, Ralf and Clementi, Cecilia},
+    author = {No{\'e}, Frank and Banisch, Ralf and Clementi, Cecilia},
     journal = {Journal of chemical theory and computation},
     volume = {12},
     number = {11},
@@ -114,7 +114,7 @@
 }
 @article{wu2020variational,
     title = {Variational approach for learning Markov processes from time series data},
-    author = {Wu, Hao and No {\'e} , Frank},
+    author = {Wu, Hao and No{\'e}, Frank},
     journal = {Journal of Nonlinear Science},
     volume = {30},
     number = {1},
@@ -124,7 +124,7 @@
 }
 @article{scherer2019variational,
     title = {Variational selection of features for molecular kinetics},
-    author = {Scherer, Martin K and Husic, Brooke E and Hoffmann, Moritz and Paul, Fabian and Wu, Hao and No {\'e} , Frank},
+    author = {Scherer, Martin K and Husic, Brooke E and Hoffmann, Moritz and Paul, Fabian and Wu, Hao and No{\'e} , Frank},
     journal = {The Journal of chemical physics},
     volume = {150},
     number = {19},
@@ -134,7 +134,7 @@
 }
 @article{noe2013variational,
     title = {A variational approach to modeling slow processes in stochastic dynamical systems},
-    author = {No {\'e} , Frank and Nuske, Feliks},
+    author = {No{\'e}, Frank and N{\"u}ske, Feliks},
     journal = {Multiscale Modeling \& Simulation},
     volume = {11},
     number = {2},
@@ -144,7 +144,7 @@
 }
 @article{koltai2018optimal,
     title = {Optimal data-driven estimation of generalized Markov state models for non-equilibrium dynamics},
-    author = {Koltai, P {\'e} ter and Wu, Hao and No {\'e} , Frank and Sch {\"u} tte, Christof},
+    author = {Koltai, P{\'e}ter and Wu, Hao and No{\'e}, Frank and Sch{\"u}tte, Christof},
     journal = {Computation},
     volume = {6},
     number = {1},
@@ -164,7 +164,7 @@
 }
 @article{macklin2013position,
     title = {Position based fluids},
-    author = {Macklin, Miles and M {\"u} ller, Matthias},
+    author = {Macklin, Miles and M{\"u}ller, Matthias},
     journal = {ACM Transactions on Graphics (TOG)},
     volume = {32},
     number = {4},
@@ -192,7 +192,7 @@
 }
 @article{wu2017variational,
     title = {Variational Koopman models: slow collective variables and molecular kinetics from short off-equilibrium simulations},
-    author = {Wu, Hao and N {\"u} ske, Feliks and Paul, Fabian and Klus, Stefan and Koltai, P {\'e} ter and No {\'e} , Frank},
+    author = {Wu, Hao and N{\"u}ske, Feliks and Paul, Fabian and Klus, Stefan and Koltai, P{\'e}ter and No{\'e}, Frank},
     journal = {The Journal of chemical physics},
     volume = {146},
     number = {15},
@@ -202,7 +202,7 @@
 }
 @article{roblitz2013fuzzy,
     title = {Fuzzy spectral clustering by PCCA+: application to Markov state models and data classification},
-    author = {R {\"o} blitz, Susanna and Weber, Marcus},
+    author = {R{\"o}blitz, Susanna and Weber, Marcus},
     journal = {Advances in Data Analysis and Classification},
     volume = {7},
     number = {2},
@@ -212,7 +212,7 @@
 }
 @article{noe2013projected,
     title = {Projected and hidden Markov models for calculating kinetics and metastable states of complex molecules},
-    author = {No {\'e} , Frank and Wu, Hao and Prinz, Jan-Hendrik and Plattner, Nuria},
+    author = {No{\'e}, Frank and Wu, Hao and Prinz, Jan-Hendrik and Plattner, Nuria},
     journal = {The Journal of chemical physics},
     volume = {139},
     number = {18},
@@ -222,7 +222,7 @@
 }
 @article{metzner2009transition,
     title = {Transition path theory for Markov jump processes},
-    author = {Metzner, Philipp and Sch {\"u} tte, Christof and Vanden-Eijnden, Eric},
+    author = {Metzner, Philipp and Sch{\"u}tte, Christof and Vanden-Eijnden, Eric},
     journal = {Multiscale Modeling \& Simulation},
     volume = {7},
     number = {3},
@@ -232,7 +232,7 @@
 }
 @article{trendelkamp2015estimation,
     title = {Estimation and uncertainty of reversible Markov models},
-    author = {Trendelkamp-Schroer, Benjamin and Wu, Hao and Paul, Fabian and No {\'e} , Frank},
+    author = {Trendelkamp-Schroer, Benjamin and Wu, Hao and Paul, Fabian and No{\'e}, Frank},
     journal = {The Journal of chemical physics},
     volume = {143},
     number = {17},
@@ -251,13 +251,13 @@
 }
 @article{chodera2011bayesian,
     title = {Bayesian hidden Markov model analysis of single-molecule force spectroscopy: Characterizing kinetics under measurement uncertainty},
-    author = {Chodera, John D and Elms, Phillip and No {\'e} , Frank and Keller, Bettina and Kaiser, Christian M and Ewall-Wice, Aaron and Marqusee, Susan and Bustamante, Carlos and Hinrichs, Nina Singhal},
+    author = {Chodera, John D and Elms, Phillip and No{\'e}, Frank and Keller, Bettina and Kaiser, Christian M and Ewall-Wice, Aaron and Marqusee, Susan and Bustamante, Carlos and Hinrichs, Nina Singhal},
     journal = {arXiv preprint arXiv:1108.1430},
     year = {2011}
 }
 @article{olsson2017combining,
     title = {Combining experimental and simulation data of molecular processes via augmented Markov models},
-    author = {Olsson, Simon and Wu, Hao and Paul, Fabian and Clementi, Cecilia and No {\'e} , Frank},
+    author = {Olsson, Simon and Wu, Hao and Paul, Fabian and Clementi, Cecilia and No{\'e}, Frank},
     journal = {Proceedings of the National Academy of Sciences},
     volume = {114},
     number = {31},
@@ -267,7 +267,7 @@
 }
 @article{noe2011dynamical,
     title = {Dynamical fingerprints for probing individual relaxation processes in biomolecular dynamics with simulations and kinetic experiments},
-    author = {No {\'e} , Frank and Doose, S {\"o} ren and Daidone, Isabella and L {\"o} llmann, Marc and Sauer, Markus and Chodera, John D and Smith, Jeremy C},
+    author = {No{\'e}, Frank and Doose, S{\"o}ren and Daidone, Isabella and L{\"o}llmann, Marc and Sauer, Markus and Chodera, John D and Smith, Jeremy C},
     journal = {Proceedings of the National Academy of Sciences},
     volume = {108},
     number = {12},
@@ -277,7 +277,7 @@
 }
 @article{lindner2013dynamic,
     title = {Dynamic neutron scattering from conformational dynamics. I. Theory and Markov models},
-    author = {Lindner, Benjamin and Yi, Zheng and Prinz, Jan-Hendrik and Smith, Jeremy C and No {\'e} , Frank},
+    author = {Lindner, Benjamin and Yi, Zheng and Prinz, Jan-Hendrik and Smith, Jeremy C and No{\'e}, Frank},
     journal = {The Journal of chemical physics},
     volume = {139},
     number = {17},
@@ -287,13 +287,13 @@
 }
 @article{noe2015statistical,
     title = {Statistical inefficiency of Markov model count matrices},
-    author = {No {\'e} , Frank},
+    author = {No{\'e}, Frank},
     journal = {Preprint, http://publications. mi. fu-berlin. de/1699},
     year = {2015}
 }
 @article{nuske2017markov,
     title = {Markov state models from short non-equilibrium simulations—Analysis and correction of estimation bias},
-    author = {N {\"u} ske, Feliks and Wu, Hao and Prinz, Jan-Hendrik and Wehmeyer, Christoph and Clementi, Cecilia and No {\'e} , Frank},
+    author = {N{\"u}ske, Feliks and Wu, Hao and Prinz, Jan-Hendrik and Wehmeyer, Christoph and Clementi, Cecilia and No{\'e}, Frank},
     journal = {The Journal of Chemical Physics},
     volume = {146},
     number = {9},
@@ -313,7 +313,7 @@
 }
 @book{bowman2013introduction,
     title = {An introduction to Markov state models and their application to long timescale molecular simulation},
-    author = {Bowman, Gregory R and Pande, Vijay S and No {\'e} , Frank},
+    author = {Bowman, Gregory R and Pande, Vijay S and No{\'e}, Frank},
     volume = {797},
     year = {2013},
     publisher = {Springer Science \& Business Media}
@@ -358,7 +358,7 @@
 }
 @article{noe2009constructing,
     title = {Constructing the equilibrium ensemble of folding pathways from short off-equilibrium simulations},
-    author = {No {\'e} , Frank and Sch {\"u} tte, Christof and Vanden-Eijnden, Eric and Reich, Lothar and Weikl, Thomas R},
+    author = {No{\'e}, Frank and Sch{\"u}tte, Christof and Vanden-Eijnden, Eric and Reich, Lothar and Weikl, Thomas R},
     journal = {Proceedings of the National Academy of Sciences},
     volume = {106},
     number = {45},
@@ -405,7 +405,7 @@
 }
 @article{deuflhard2000identification,
     title = {Identification of almost invariant aggregates in reversible nearly uncoupled Markov chains},
-    author = {Deuflhard, P and Huisinga, W and Fischer, A and Sch {\"u} tte, Ch},
+    author = {Deuflhard, P and Huisinga, W and Fischer, A and Sch{\"u}tte, Ch},
     journal = {Linear Algebra and its Applications},
     volume = {315},
     pages = {39--59},
@@ -429,7 +429,7 @@
 }
 @article{mardt2018vampnets,
     title = {VAMPnets for deep learning of molecular kinetics},
-    author = {Mardt, Andreas and Pasquali, Luca and Wu, Hao and No {\'e} , Frank},
+    author = {Mardt, Andreas and Pasquali, Luca and Wu, Hao and No{\'e}, Frank},
     journal = {Nature communications},
     volume = {9},
     number = {1},
@@ -522,7 +522,7 @@
 }
 @article{klus2018kernel,
     title = {A kernel-based approach to molecular conformation analysis},
-    author = {Klus, Stefan and Bittracher, Andreas and Schuster, Ingmar and Sch {\"u} tte, Christof},
+    author = {Klus, Stefan and Bittracher, Andreas and Schuster, Ingmar and Sch{\"u}tte, Christof},
     journal = {The Journal of Chemical Physics},
     volume = {149},
     number = {24},
