--- a/docs/source/notebooks/tae.ipynb
+++ b/docs/source/notebooks/tae.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Time-lagged autoencoders\n",
     "\n",
-    "For users already familiar with the time-lagged autoencoders interface: The corresponding [API docs](../api/generated/deeptime.decomposition.TAE.html#deeptime.decomposition.TAE).\n",
+    "For users already familiar with the time-lagged autoencoders interface: The corresponding API docs [TAE](../api/generated/deeptime.decomposition.TAE.rst#deeptime.decomposition.TAE) and [TVAE](../api/generated/deeptime.decomposition.TVAE.rst#deeptime.decomposition.TVAE).\n",
     "\n",
     "Time-lagged autoencoders <cite data-cite=\"nbtae-wehmeyer2018timelagged\">(Wehmeyer, 2018)</cite> are a type of neural network approach which tries to first compress / encode instantaneous data through a function\n",
     "\n",
