--- a/docs/source/notebooks/vampnets.ipynb
+++ b/docs/source/notebooks/vampnets.ipynb
@@ -16,10 +16,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:53.157228Z",
-     "iopub.status.busy": "2020-10-26T12:02:53.154596Z",
-     "iopub.status.idle": "2020-10-26T12:02:53.916809Z",
-     "shell.execute_reply": "2020-10-26T12:02:53.916331Z"
+     "iopub.execute_input": "2020-11-04T13:28:21.679441Z",
+     "iopub.status.busy": "2020-11-04T13:28:21.678278Z",
+     "iopub.status.idle": "2020-11-04T13:28:22.554785Z",
+     "shell.execute_reply": "2020-11-04T13:28:22.554123Z"
     }
    },
    "outputs": [],
@@ -42,10 +42,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:53.920390Z",
-     "iopub.status.busy": "2020-10-26T12:02:53.919991Z",
-     "iopub.status.idle": "2020-10-26T12:02:53.922290Z",
-     "shell.execute_reply": "2020-10-26T12:02:53.921902Z"
+     "iopub.execute_input": "2020-11-04T13:28:22.559604Z",
+     "iopub.status.busy": "2020-11-04T13:28:22.559015Z",
+     "iopub.status.idle": "2020-11-04T13:28:22.560808Z",
+     "shell.execute_reply": "2020-11-04T13:28:22.561173Z"
     }
    },
    "outputs": [],
@@ -68,7 +68,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:22.567529Z",
+     "iopub.status.busy": "2020-11-04T13:28:22.567079Z",
+     "iopub.status.idle": "2020-11-04T13:28:22.571242Z",
+     "shell.execute_reply": "2020-11-04T13:28:22.570758Z"
+    }
+   },
    "outputs": [],
    "source": [
     "dtraj, traj = dt.data.sqrt_model(n_samples=10000)"
@@ -84,10 +91,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:22.578111Z",
+     "iopub.status.busy": "2020-11-04T13:28:22.577631Z",
+     "iopub.status.idle": "2020-11-04T13:28:25.153819Z",
+     "shell.execute_reply": "2020-11-04T13:28:25.154203Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import scipy.stats as stats\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "X, Y = np.meshgrid(\n",
@@ -120,7 +135,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:25.157570Z",
+     "iopub.status.busy": "2020-11-04T13:28:25.157174Z",
+     "iopub.status.idle": "2020-11-04T13:28:25.159504Z",
+     "shell.execute_reply": "2020-11-04T13:28:25.159030Z"
+    }
+   },
    "outputs": [],
    "source": [
     "dataset = dt.data.TimeLaggedDataset.from_trajectory(lagtime=1, data=traj.astype(np.float32))"
@@ -138,10 +160,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:54.385092Z",
-     "iopub.status.busy": "2020-10-26T12:02:54.384698Z",
-     "iopub.status.idle": "2020-10-26T12:02:54.389596Z",
-     "shell.execute_reply": "2020-10-26T12:02:54.389990Z"
+     "iopub.execute_input": "2020-11-04T13:28:25.163317Z",
+     "iopub.status.busy": "2020-11-04T13:28:25.162769Z",
+     "iopub.status.idle": "2020-11-04T13:28:25.165506Z",
+     "shell.execute_reply": "2020-11-04T13:28:25.165076Z"
     }
    },
    "outputs": [],
@@ -162,10 +184,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:54.393612Z",
-     "iopub.status.busy": "2020-10-26T12:02:54.393042Z",
-     "iopub.status.idle": "2020-10-26T12:02:54.396457Z",
-     "shell.execute_reply": "2020-10-26T12:02:54.396041Z"
+     "iopub.execute_input": "2020-11-04T13:28:25.169392Z",
+     "iopub.status.busy": "2020-11-04T13:28:25.168578Z",
+     "iopub.status.idle": "2020-11-04T13:28:25.172391Z",
+     "shell.execute_reply": "2020-11-04T13:28:25.171903Z"
     }
    },
    "outputs": [],
@@ -186,10 +208,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:54.399483Z",
-     "iopub.status.busy": "2020-10-26T12:02:54.399016Z",
-     "iopub.status.idle": "2020-10-26T12:02:54.401463Z",
-     "shell.execute_reply": "2020-10-26T12:02:54.401772Z"
+     "iopub.execute_input": "2020-11-04T13:28:25.175906Z",
+     "iopub.status.busy": "2020-11-04T13:28:25.175293Z",
+     "iopub.status.idle": "2020-11-04T13:28:25.178240Z",
+     "shell.execute_reply": "2020-11-04T13:28:25.178590Z"
     }
    },
    "outputs": [],
@@ -207,7 +229,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:25.181922Z",
+     "iopub.status.busy": "2020-11-04T13:28:25.181493Z",
+     "iopub.status.idle": "2020-11-04T13:28:25.183625Z",
+     "shell.execute_reply": "2020-11-04T13:28:25.183186Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
@@ -219,7 +248,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:25.187431Z",
+     "iopub.status.busy": "2020-11-04T13:28:25.186710Z",
+     "iopub.status.idle": "2020-11-04T13:28:39.413131Z",
+     "shell.execute_reply": "2020-11-04T13:28:39.413541Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model = vampnet.fit(loader_train, n_epochs=80, validation_loader=loader_val).fetch_model()"
@@ -235,7 +271,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:39.437494Z",
+     "iopub.status.busy": "2020-11-04T13:28:39.434379Z",
+     "iopub.status.idle": "2020-11-04T13:28:40.151147Z",
+     "shell.execute_reply": "2020-11-04T13:28:40.151571Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.loglog(*vampnet.train_scores.T, label='training')\n",
@@ -255,7 +298,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:40.156538Z",
+     "iopub.status.busy": "2020-11-04T13:28:40.155853Z",
+     "iopub.status.idle": "2020-11-04T13:28:40.621896Z",
+     "shell.execute_reply": "2020-11-04T13:28:40.621046Z"
+    }
+   },
    "outputs": [],
    "source": [
     "feat = model.transform(traj)\n",
@@ -271,13 +321,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparing to a direct evaluation of [VAMP](vamp.ipynb), one can see that the the projection disentangles the process better when using the trained transformation - mainly due to the states not being linearly separable and VAMP being a linear method."
+    "The learnt function $\\chi(x,y)$ places a decision surface between the two states:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = np.meshgrid(np.linspace(-15, 15, 50), np.linspace(-1, 4, 50))\n",
+    "xy = np.dstack(grid).reshape(-1, 2)\n",
+    "z = model.transform(xy)\n",
+    "\n",
+    "fig = plt.figure(figsize=(10, 10))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "cb = ax.plot_trisurf(*xy.T, z.squeeze(), cmap='coolwarm', antialiased=True, alpha=1)\n",
+    "ax.scatter(*traj.T, feat, color='black', marker='x')\n",
+    "ax.set_xlabel('x')\n",
+    "ax.set_ylabel('y')\n",
+    "ax.set_zlabel(r\"$\\chi(x, y)$\")\n",
+    "\n",
+    "plt.colorbar(cb, ax=ax, shrink=.6);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing to a direct evaluation of [VAMP](vamp.ipynb), one can see that the the projection disentangles the process better when using the trained transformation - mainly due to the states not being linearly separable and VAMP being a linear method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:40.627419Z",
+     "iopub.status.busy": "2020-11-04T13:28:40.626151Z",
+     "iopub.status.idle": "2020-11-04T13:28:40.664203Z",
+     "shell.execute_reply": "2020-11-04T13:28:40.664520Z"
+    }
+   },
    "outputs": [],
    "source": [
     "vamp_model_vnet = dt.decomposition.VAMP(lagtime=1).fit(feat).fetch_model()\n",
@@ -287,7 +373,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:40.669569Z",
+     "iopub.status.busy": "2020-11-04T13:28:40.668861Z",
+     "iopub.status.idle": "2020-11-04T13:28:41.131442Z",
+     "shell.execute_reply": "2020-11-04T13:28:41.131834Z"
+    }
+   },
    "outputs": [],
    "source": [
     "feat = model.transform(traj)\n",
@@ -310,7 +403,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-04T13:28:41.135566Z",
+     "iopub.status.busy": "2020-11-04T13:28:41.134939Z",
+     "iopub.status.idle": "2020-11-04T13:28:41.137739Z",
+     "shell.execute_reply": "2020-11-04T13:28:41.138144Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f'VAMPNet score {vamp_model_vnet.score():.5f}')\n",
@@ -329,10 +429,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:04:50.057825Z",
-     "iopub.status.busy": "2020-10-26T12:04:50.057433Z",
-     "iopub.status.idle": "2020-10-26T12:04:50.072062Z",
-     "shell.execute_reply": "2020-10-26T12:04:50.072378Z"
+     "iopub.execute_input": "2020-11-04T13:28:41.144749Z",
+     "iopub.status.busy": "2020-11-04T13:28:41.142426Z",
+     "iopub.status.idle": "2020-11-04T13:28:41.149733Z",
+     "shell.execute_reply": "2020-11-04T13:28:41.149210Z"
     }
    },
    "outputs": [],
@@ -354,10 +454,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:04:50.075626Z",
-     "iopub.status.busy": "2020-10-26T12:04:50.075246Z",
-     "iopub.status.idle": "2020-10-26T12:04:50.077896Z",
-     "shell.execute_reply": "2020-10-26T12:04:50.077319Z"
+     "iopub.execute_input": "2020-11-04T13:28:41.153480Z",
+     "iopub.status.busy": "2020-11-04T13:28:41.153054Z",
+     "iopub.status.idle": "2020-11-04T13:28:41.154985Z",
+     "shell.execute_reply": "2020-11-04T13:28:41.155770Z"
     }
    },
    "outputs": [],
