[docs] 2d decision surface

--- a/docs/source/notebooks/vampnets.ipynb
+++ b/docs/source/notebooks/vampnets.ipynb
@@ -312,38 +312,24 @@
     "\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6))\n",
     "\n",
+    "ax1.set_title(r'Projected timeseries $\\chi(x_t, y_t)$')\n",
     "ax1.plot(feat[:1000])\n",
-    "cm = ax2.scatter(*traj.T, c=feat, cmap='coolwarm')\n",
-    "plt.colorbar(cm, ax=ax2);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The learnt function $\\chi(x,y)$ places a decision surface between the two states:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid = np.meshgrid(np.linspace(-15, 15, 50), np.linspace(-1, 4, 50))\n",
+    "ax1.set_xlabel('t (a.u.)')\n",
+    "ax1.set_ylabel(r'$\\chi(x_t, y_t)$')\n",
+    "\n",
+    "xmax = np.max(np.abs(traj[:, 0]))\n",
+    "ymin = np.min(traj[:, 1])\n",
+    "ymax = np.max(traj[:, 1])\n",
+    "grid = np.meshgrid(np.linspace(-xmax-1, xmax+1, 150), np.linspace(ymin-1, ymax+1, 50))\n",
     "xy = np.dstack(grid).reshape(-1, 2)\n",
     "z = model.transform(xy)\n",
     "\n",
-    "fig = plt.figure(figsize=(10, 10))\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "cb = ax.plot_trisurf(*xy.T, z.squeeze(), cmap='coolwarm', antialiased=True, alpha=1)\n",
-    "ax.scatter(*traj.T, feat, color='black', marker='x')\n",
-    "ax.set_xlabel('x')\n",
-    "ax.set_ylabel('y')\n",
-    "ax.set_zlabel(r\"$\\chi(x, y)$\")\n",
-    "\n",
-    "plt.colorbar(cb, ax=ax, shrink=.6);"
+    "ax2.set_title(r'Values of $\\chi(x,y)$')\n",
+    "ax2.set_xlabel('x')\n",
+    "ax2.set_ylabel('y')\n",
+    "cb = ax2.contourf(grid[0], grid[1], z.reshape(grid[0].shape), levels=15, cmap='coolwarm')\n",
+    "ax2.scatter(*traj.T, feat, color='black', marker='x')\n",
+    "plt.colorbar(cb, ax=ax2);"
    ]
   },
   {
@@ -387,10 +373,18 @@
     "\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6))\n",
     "\n",
+    "ax1.set_title(r'Projected timeseries $\\mathrm{VAMP}(x_t, y_t)$')\n",
     "ax1.plot(vamp_model_direct.transform(traj)[:1000])\n",
+    "ax1.set_xlabel('t (a.u.)')\n",
+    "ax1.set_ylabel(r'$\\mathrm{VAMP}(x_t, y_t)$')\n",
     "\n",
-    "cm = ax2.scatter(*traj.T, c=vamp_model_direct.transform(traj), cmap='coolwarm')\n",
-    "plt.colorbar(cm, ax=ax2);"
+    "z = vamp_model_direct.transform(xy)\n",
+    "ax2.set_title(r'Values of $\\mathrm{VAMP}(x,y)$')\n",
+    "ax2.set_xlabel('x')\n",
+    "ax2.set_ylabel('y')\n",
+    "cb = ax2.contourf(grid[0], grid[1], z.reshape(grid[0].shape), levels=15, cmap='coolwarm')\n",
+    "ax2.scatter(*traj.T, feat, color='black', marker='x')\n",
+    "plt.colorbar(cb, ax=ax2);"
    ]
   },
   {
