--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -345,7 +345,7 @@
   publisher={Springer}
 }
 @article{williams2015data,
-  title={A data--driven approximation of the koopman operator: Extending dynamic mode decomposition},
+  title={A data-driven approximation of the {K}oopman operator: Extending dynamic mode decomposition},
   author={Williams, Matthew O and Kevrekidis, Ioannis G and Rowley, Clarence W},
   journal={Journal of Nonlinear Science},
   volume={25},
@@ -519,14 +519,14 @@
   year={2016},
   publisher={National Acad Sciences}
 }
-@article{kevrekidis2016kernel,
-  title={A kernel-based method for data-driven Koopman spectral analysis},
-  author={Kevrekidis, Ioannis G and Rowley, Clarence W and Williams, Matthew O},
-  journal={Journal of Computational Dynamics},
-  volume={2},
-  number={2},
-  pages={247--265},
-  year={2016}
+@article{williams2016kernel,
+ author  = {Williams, , Matthew O and Rowley, Clarence W and Kevrekidis, Ioannis G},
+ journal = {Journal of Computational Dynamics},
+ title   = {A Kernel-Based Method for Data-Driven {K}oopman Spectral Analysis},
+ volume  = {2},
+ number  = {2},
+ pages   = {247--265},
+ year    = {2015}
 }
 @article{klus2018kernel,
   title={A kernel-based approach to molecular conformation analysis},
@@ -546,4 +546,41 @@
   number={Jul},
   pages={1--48},
   year={2002}
+}
+@article{klus2019coherent,
+ author  = {Klus, Stefan and Husic, Brooke E and Mollenhauer, Mattes and No\'e, Frank},
+ title   = {Kernel methods for detecting coherent structures in dynamical data},
+ journal = {Chaos},
+ year    = {2019},
+ doi     = {10.1063/1.5100267}
+}
+@article{klus2019eigendecomposition,
+ author  = {Klus, Stefan and Schuster, Ingmar and Muandet, Krikamol},
+ title   = {Eigendecompositions of Transfer Operators in Reproducing Kernel {H}ilbert Spaces},
+ journal = {Journal of Nonlinear Science},
+ volume  = {30},
+ issue   = {1},
+ pages   = {283--315},
+ year    = {2019},
+ doi     = {10.1007/s00332-019-09574-z},
+}
+@article{klus1028dmdtica,
+ author  = {Klus, Stefan and N\"uske, Feliks and Koltai, Peter and Wu, Hao and Kevrekidis, Ioannis G  and Sch\"utte, Christof and No\'e, Frank},
+ title   = {Data-driven model reduction and transfer operator approximation},
+ journal = {Journal of Nonlinear Science},
+ volume  = {28},
+ issue   = {3},
+ pages   = {985--1010},
+ year    = {2018},
+ doi     = {10.1007/s00332-017-9437-7},
+}
+@article{froyland2010coherent,
+ author  = {Froyland, Gary and Santitissadeekorn, Naratip and Monahan, Adam},
+ title   = {Transport in time-dependent dynamical systems: Finite-time coherent sets},
+ journal = {Chaos: An Interdisciplinary Journal of Nonlinear Science},
+ volume  = {20},
+ number  = {4},
+ pages   = {043116},
+ year    = {2010},
+ doi     = {10.1063/1.3502450},
 }
