--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "where $p(y \\mid x)$ is the conditional probability density that a point $y$ at time $t+\\tau$ is visited given that point $x$ was visited at time $t$. Making the ansatz that $g$ is a linear combination $g = \\sum_i w_i \\chi_i$ for some basis functions $\\chi_i$, the linear operator $\\mathcal{K}_\\tau$ can be expressed as matrix $K$. It can be shown <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite>, that the dominant eigenfunctions of an SVD of the Koopman operator in a whitenend basis $\\bar K$ yields the best dynamical model for a given timeseries, which is also what is computed and projected on in estimator and model, respectively.\n",
     "\n",
-    "VAMP deals with off-equilibrium cases consistently, which can be divided into three subcategories (as presented in :cite:`ix-dimredux-koltai2018optimal`):\n",
+    "VAMP deals with off-equilibrium cases consistently, which can be divided into three subcategories (as presented in <cite data-cite=\"nbvamp-koltai2018optimal\">(Koltai, 2018)</cite>):\n",
     "\n",
     "1. *Time-inhomogeneous dynamics*, e.g, the observed system is driven by a time-dependent external force,\n",
     "2. *Time-homogeneous non-reversible dynamics*, i.e., detailed balance is not obeyed and the observations might be\n",
@@ -28,7 +28,7 @@
     "   distribution.\n",
     "   \n",
     "The third of the described cases is salvageable with TICA when a special reweighting procedure\n",
-    "(`Koopman reweighting <notebooks/tica.ipynb#Koopman-reweighting>`_) is used."
+    "([Koopman reweighting](tica.ipynb#Koopman-reweighting)) is used."
    ]
   },
   {
