[docs/sindy] make links relative

--- a/docs/source/notebooks/sindy.ipynb
+++ b/docs/source/notebooks/sindy.ipynb
@@ -107,8 +107,8 @@
     "## Deeptime SINDy objects\n",
     "Deeptime has two SINDy objects:\n",
     "\n",
-    "* [SINDy](https://deeptime-ml.github.io/api/generated/deeptime.sindy.SINDy.html#deeptime.sindy.SINDy) is used to solve the above optimization problem given $\\Theta$, $X$, and (optionally) $\\dot{X}$. By default $\\Theta$ is a polynomial library of degree 2 and the sequentially-thresholded least-squares algorithm <cite data-cite=\"sindy-brunton2016sindy\">(Brunton, 2016)</cite> is used to solve the optimization problem. If $\\dot{X}$ is not passed in, then it is estimated from $X$ with a first order finite difference method.\n",
-    "* [SINDyModel](https://deeptime-ml.github.io/api/generated/deeptime.sindy.SINDyModel.html#deeptime.sindy.SINDyModel) represents the learned dynamical system. It can be used to predict derivatives given state variables, simulate forward in time from novel initial conditions, and to score itself against ground truth data.\n",
+    "* [SINDy](../api/generated/deeptime.sindy.SINDy.rst#deeptime.sindy.SINDy) is used to solve the above optimization problem given $\\Theta$, $X$, and (optionally) $\\dot{X}$. By default $\\Theta$ is a polynomial library of degree 2 and the sequentially-thresholded least-squares algorithm <cite data-cite=\"sindy-brunton2016sindy\">(Brunton, 2016)</cite> is used to solve the optimization problem. If $\\dot{X}$ is not passed in, then it is estimated from $X$ with a first order finite difference method.\n",
+    "* [SINDyModel](../api/generated/deeptime.sindy.SINDyModel.rst#deeptime.sindy.SINDyModel) represents the learned dynamical system. It can be used to predict derivatives given state variables, simulate forward in time from novel initial conditions, and to score itself against ground truth data.\n",
     "\n",
     "Let's see how these objects work with an example."
    ]
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To form a [SINDy](https://deeptime-ml.github.io/api/generated/deeptime.sindy.SINDy.html#deeptime.sindy.SINDy) estimator we can select a feature library and an optimization routine.\n",
+    "To form a [SINDy](../api/generated/deeptime.sindy.SINDy.rst#deeptime.sindy.SINDy) estimator we can select a feature library and an optimization routine.\n",
     "\n",
     "Let's use polynomials of degree up to three for the candidate library $\\Theta$ and sequentially-thresholded least-squares with a threshold of 0.2 to solve the optimization problem"
    ]
@@ -268,7 +268,7 @@
    "source": [
     "The learned model is very close to the true governing equations!\n",
     "\n",
-    "We can use it to evolve new initial conditions forward in time with the [simulate](https://deeptime-ml.github.io/api/generated/deeptime.sindy.SINDyModel.html#deeptime.sindy.SINDyModel.simulate) method."
+    "We can use it to evolve new initial conditions forward in time with the [simulate](../api/generated/deeptime.sindy.SINDyModel.rst#deeptime.sindy.SINDyModel.simulate) method."
    ]
   },
   {
